<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.FingerPrint">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="222dp"
        android:layout_height="339dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_finger_print" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="347dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/finger_print"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

    <Button
        android:id="@+id/btn_yes"
        android:layout_width="114dp"
        android:layout_height="57dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/white"
        android:text="@string/yes"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.144" />

    <Button
        android:id="@+id/btn_no"
        android:layout_width="114dp"
        android:layout_height="57dp"
        android:layout_marginStart="68dp"
        android:backgroundTint="@color/white"
        android:text="@string/no"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.144" />

</androidx.constraintlayout.widget.ConstraintLayout>